# infoflowhub

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-web.txt  requirements.txt  一键清缓存并打开InfoFlowHub.bat
.agents/: 工作日志.md
.workbuddy/memory/: 2026-06-03.md  2026-06-05.md  (+1 more)
app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/: __init__.py
config/: rss_settings.json  rss_sources.json  subscription_sources.example.json  subscription_sources.json
connectors/: __init__.py
data/: laterhub.sqlite3  subscriptions.sqlite3
infra/: text_normalizer.py  utf8_json.py
laterhub/: .env.example  .gitignore  README.md  __init__.py  run_auto.py
lib/: data.ts  env.ts  python-bridge.ts  types.ts  utils.ts
newshub/: README.md
plans/: alphapai_scraper.md
runtime/: tmp_chrome_probe.mjs  wechat_auth.example.json  wechat_auth.json
scripts/: alphapai_batch_download.user.js  dom_analyzer.user.js  ensure_python_env.ps1  fetch_alphapai.py  login_douyin.py  login_profiles.py  login_weibo.py  login_x.py  normalize_runtime_utf8.py  repair_bilibili_published.py  restart_infoflow_dev.ps1  restart_infoflow_web.ps1  run_alphapai_pipeline.bat  start_infoflow.ps1  start_infoflow_web.ps1  update_chrome_bookmark.py  web_bridge.py  一键重新拉起InfoFlowHub服务.bat
subscriptions/: README.md
tests/: test_alphapai_browser_profile.py  test_chrome_runner.py  test_entries_query_state.py  test_laterhub_query_state.py  test_utf8_canonicalization.py  test_wechat_auth_storage.py  test_youtube_and_subscription_dedup.py
web/: app.py  server.py
(+3271 files in other folders)
