[project]
name = "infoflowhub"
version = "0.1.0"
description = "InfoFlowHub: fetch + store + web console for personal content tracking"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
    "feedparser>=6,<7",
    "httpx>=0.27,<1",
    "requests>=2.31,<3",
    "python-dotenv>=1,<2",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40,<2",
]

[tool.uv]
package = false
